[gd_scene load_steps=7 format=3 uid="uid://bprn3bs6oj6qg"]

[ext_resource type="Texture2D" uid="uid://tjcgnk8cfa2s" path="res://tex/png/PAPER_1B.PNG" id="1_rhush"]
[ext_resource type="ArrayMesh" uid="uid://qkiywgo0jq0l" path="res://3d/bottle.obj" id="2_nc0uu"]
[ext_resource type="Script" path="res://entities/health_pickup.gd" id="3_3lphv"]
[ext_resource type="AudioStream" uid="uid://h0opvtejqmul" path="res://sfx/Health.wav" id="4_o0bo2"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_aj754"]
shading_mode = 2
diffuse_mode = 3
specular_mode = 1
vertex_color_use_as_albedo = true
albedo_color = Color(0.247059, 0.384314, 0.184314, 1)
albedo_texture = ExtResource("1_rhush")
uv1_triplanar = true

[sub_resource type="SphereShape3D" id="SphereShape3D_413iv"]

[node name="Bottle" type="Area3D"]
script = ExtResource("3_3lphv")

[node name="BottleMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.988803, -0.149225, 0, 0.149225, 0.988803, 0, 0, 0)
material_override = SubResource("StandardMaterial3D_aj754")
mesh = ExtResource("2_nc0uu")

[node name="BottleLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.341722, 0)
light_color = Color(0.247059, 0.819608, 0.282353, 1)
omni_range = 2.0

[node name="BottleColl" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.426536, 0)
shape = SubResource("SphereShape3D_413iv")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_o0bo2")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
